--- a/parsing/example-config.json
+++ b/parsing/example-config.json
@@ -1,9 +1,15 @@
-{"bmstu": {
-  "username": "",
-  "password": ""
-},
+{
+  "bmstu": {
+    "username": "",
+    "password": ""
+  },
   "vk": {
     "access_token": "",
     "groups": []
+  },
+  "mysql": {
+    "user": "",
+    "password": "",
+    "server": ""
   }
 }
