--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.idea
-/parsing/config.json
+/config.json
 
 # Binaries for programs and plugins
 *.exe
@@ -47,7 +47,8 @@ MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+#  before PyInstaller builds
+# the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
